# ETHZ-NumericalMethods

./: .gitignore  template-header.tex
0/: Makefile  e1.cpp  e2.cpp  e3.cpp
1/: Makefile  arrowmatvec.m  arrowmatvec2.m  e1.cpp  sinderivative.m  sindiff.m  time.m
1/tex/: e1.tex  solution.tex
2/: buildC.m
2/tex/: solution.tex
exercises/1/: CMakeLists.txt  arrowmatvec.m  arrowmatvectiming.eps  kron.cpp  matPow.cpp  multAB.m  multAmin.cpp
exercises/10/: GaussArcSin.p  GaussArcSinCV.p  quadinf_template.cpp
exercises/11/: gauleg.cpp  laserquad_template.cpp
exercises/12/: CMakeLists.txt  rk3prey_template.cpp  taylorintegrator_template.hpp  taylorprey_template.cpp
exercises/13/: CMakeLists.txt  ExpEul_template.cpp  LV_template.cpp  README.md  matrix_ode_template.cpp  stabrk_template.cpp
exercises/14/: cross_template.cpp  dampnewton.hpp  implicit_rk3prey.cpp  implicit_rkintegrator_template.hpp  rosenbrock_template.cpp  sdirk_template.cpp  stabdomSDIRK_template.m
exercises/3/: CMakeLists.txt  getinfo.m  impedancemap.cpp  meshtest.m  rankoneinvit.m
exercises/7/: heart.m  intpolyval.m  quadspline_p.p
exercises/9/: piecewise_hermite_interpolation_template.cpp
solutions/0/: CMakeLists.txt  gramschmidt.cpp  houserefl.cpp  strassen.cpp  timer.h
solutions/1/C++/: arrowmatvec.cpp  arrowmatvec2.cpp  kron.cpp  matPow.cpp  multAmin.cpp
solutions/1/Matlab/: Kron_B.m  Kron_C.m  Pow.m  arrowmatvec2.m  arrowmatvec2timing.m  arrowmatvectiming.m  cancellation.m  getit.m  mainKron.m  mainKron_cpp.m  mainPow.m  multAmin.m  multAmin2.m  multAmin_timings.m  multAmin_timings_cpp.m
solutions/10/: GaussConv.m  GaussConvCV.m  gaussquad.m  legendre.cpp  quadinf.cpp
solutions/11/: CMakeLists.txt  gauleg.hpp  laserquad.cpp  quadU.cpp  quadsingint.cpp  quadsingint_template.cpp
solutions/12/: errors.hpp  order_not_all.cpp  rk3prey.cpp  rkintegrator.hpp  rkintegrator_template.hpp  system.cpp  taylorintegrator.hpp  taylorprey.cpp
solutions/13/: ExpEul.cpp  LV.cpp  matrix_ode.cpp  ode45.hpp  ode45_test.cpp  rkintegrator.hpp  stabrk.cpp
solutions/14/: cross.cpp  implicit_rkintegrator.hpp  rosenbrock.cpp  sdirk.cpp  stabdomSDIRK.m
solutions/2/: banded_matrix.cpp  block_lu_decomp.cpp  buildC.m  solveLyapunov.cpp  solvepermb.cpp
solutions/3/: CMakeLists.txt  getinfo_doc.m  impedancemap.cpp  meshplotdemo.m  processmesh.m  processmesh_doc.m  rankoneinvit.cpp  refinemesh.m  smoothmesh.m  timer.h  tripletToCRS.cpp  tripletToCRS_solution.cpp
solutions/4/: NewtonArctan.m  ex_OrderConv.m  k_min_plot.m  recursionorder.m
solutions/5/: CMakeLists.txt  ex_JuliaSet.eps  general_nonlinear_solver.h  julia_set.m  modnewt.cpp  nonlinear_circuit.cpp  quasilin.cpp
solutions/6/: dipoleval_test.m  horner.cpp  linearinterpolant.cpp
solutions/7/: CMakeLists.txt  curveintp.m  ex_CubicSpline.m  ex_QuadraticSplinesComparison.m  ex_QuadraticSplinesConv.m  ex_QuadraticSplinesPlot.m  heart_Sol.m  heart_transform.m  interpol_quad_T2.eps  pi_approx.cpp  quadspline.m  quadspline_better.m  time-error_QuadSplines.eps
solutions/8/: adaptivepolyintp.m  natcsi.cpp  plot_adaptivepolyintp.eps  plot_adaptivepolyintp.m
solutions/9/: ChebBest.cpp  ChebOrthog.cpp  GradedMesh.m  PWlineConv.m  PWlineGraded.m  PWlineIntp.m  cheby_analytic.m  cheby_approx.m  piecewise_hermite_interpolation.cpp
